[BUG FIX] fix green pagination buttons in dark mode (#2398)

--- a/assets/styles/themes/authoring/default.scss
+++ b/assets/styles/themes/authoring/default.scss
@@ -235,19 +235,19 @@ html.authoring.dark {
   // Pagination
 
   $pagination-color: $body-color;
-  $pagination-bg: $success;
+  $pagination-bg: $gray-800;
   $pagination-border-width: 0;
   $pagination-border-color: transparent;
 
   $pagination-hover-color: $body-color;
-  $pagination-hover-bg: lighten($success, 10%);
+  $pagination-hover-bg: lighten($gray-800, 10%);
   $pagination-hover-border-color: transparent;
 
   $pagination-active-bg: $pagination-hover-bg;
   $pagination-active-border-color: transparent;
 
   $pagination-disabled-color: $body-color;
-  $pagination-disabled-bg: darken($success, 15%);
+  $pagination-disabled-bg: darken($gray-800, 5%);
   $pagination-disabled-border-color: transparent;
 
   // Jumbotron
